# holosim-infinite

./: .gitignore  AGENTS.md  Cargo.toml  HOLOGRAPHIC_OPTIMIZATION_FRAMEWORK.md  HOLOGRAPHIC_REFACTOR_ROADMAP_2026.md  HOLOSIM_INFINITE_COMPLETE_ROADMAP.md  HOLOSIM_INFINITE_COMPLETION_ROADMAP.md  HOLOSIM_INFINITE_COMPLETION_ROADMAP_V4.md  HOLOSIM_INFINITE_V5_REFACTOR_ROADMAP.md  HOLOSIM_INFINITE_V6_R&D_REFACTOR_ROADMAP.md  LICENSE  MASTER_R&D_ROADMAP.md  PROJECT_ROADMAP.md  QUICK_START_GUIDE.md  README.md  REFACTOR_ROADMAP_HOLOGRAPHIC.md  ROADMAP.md  SIMULATION_AUDIT_REPORT.md  STRATEGIC_INTELLIGENCE_REPORT_2026.md  VISUALIZATION_CONTEXT_DOCUMENT.md
.github/workflows/: ci.yml  release.yml
.sisyphus/plans/: phase1-visible-simulation.md  physics-unification.md  wgsl-architecture.md
archive/: COMPREHENSIVE_REFACTOR_PLAN_PHASE_10.md  COMPREHENSIVE_SIMULATION_REFACTOR_PLAN.md  PHASE2_ATTRACTOR_FIELDS_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE8_IMPLEMENTATION_SUMMARY.md  PHASE9_IMPLEMENTATION_SUMMARY.md  UPGRADE_Proposal_Correcting_Logoic_Archetypical_Mind_Architecture.md
archive/audit_reports/: HOLOGRAPHIC_ARCHITECTURE_AUDIT_REPORT.md
archive/developer_docs/: DIRECTORY_STRUCTURE_AUDIT_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_DOCUMENTATION_CONSOLIDATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_LEGACY_MODULE_AUDIT_REPORT.md  PHASE4_5_MIGRATION_PROGRESS_REPORT.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_MODULE_MIGRATION_PROGRESS_REPORT.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE_0_PROGRESS_REPORT.md  PHASE_8_COMPLETION_SUMMARY.md  PHASE_8_VALIDATION_REPORT.md
archive/legacy_docs/: HOLOSIM_INFINITE_COMPLETION_ROADMAP_V3.md  HOLOSIM_INFINITE_REFACTOR_ROADMAP_V5.md  HOLOSIM_INFINITE_RnD_ROADMAP_V5.md  HOLOSIM_VISUALIZATION_INTEGRATION_ROADMAP.md
archive/phase_completions/: PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md
archive/root_summaries/: DAY10_COMPLETION_SUMMARY.md  DAY10_SUMMARY.md  DAY11_COMPLETION_SUMMARY.md  DAY11_SUMMARY.md  DAY12_COMPLETION_SUMMARY.md  DAY12_SUMMARY.md  DAY13_COMPLETION_SUMMARY.md  DAY13_SUMMARY.md  DAY14_COMPLETION_SUMMARY.md  DAY14_SUMMARY.md  DAY15_COMPLETION_SUMMARY.md  DAY15_SUMMARY.md  DAY16_COMPLETION_SUMMARY.md  DAY16_SUMMARY.md  DAY17_COMPLETION_SUMMARY.md  DAY17_SUMMARY.md  DAY18_COMPLETION_SUMMARY.md  DAY18_SUMMARY.md  DAY19_COMPLETION_SUMMARY.md  DAY19_SUMMARY.md  DAY20_COMPLETION_SUMMARY.md  DAY20_SUMMARY.md  DAY9_COMPLETION_SUMMARY.md  PHASE5_WEEK10_SUMMARY.md  PHASE5_WEEK11_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_SESSION_SUMMARY.md  PHASE6_SUMMARY.md  SIMULATION-AUDIT-AND-REFACTOR-PLAN.md  SOURCE-CODE-REFACTOR-PLAN.md  TESTING-REFACTOR-ROADMAP.md
benches/: archetype_processing.rs  catalyst_generation.rs  entity_benchmark.rs  evolution_benchmark.rs  gpu_bench.rs  holographic_performance.rs  involution_benchmark.rs  phase17_2_performance_benchmark.rs  simulation_bench.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  INSTALLATION.md  REFERENCE.md  TROUBLESHOOTING.md  TUTORIAL.md  phase10_rd_findings.md  phase11_rd_findings.md  phase12_rd_findings.md  phase13_rd_findings.md  phase14_rd_findings.md  phase15_rd_findings.md  phase16_rd_findings.md  phase1_rd_findings.md  phase2_rd_findings.md  phase3_rd_findings.md  phase4_rd_findings.md  phase5_rd_findings.md  phase6_rd_findings.md  phase7_rd_findings.md  phase9_rd_findings.md
docs/developer/: ARCHITECTURE_MIGRATION.md  DIRECTORY_REFACTORING_VISUALIZATION.md
examples/: demo_scale_transitions.rs
holosim_bevy/: Cargo.toml
holosim_bevy/examples/: colony_demo.rs
holosim_bevy/src/: lib.rs
scripts/: test_egui.rs  test_fixes.rs  test_manifestation_engine  validate_performance.sh
shaders/common/: math.wgsl  types.wgsl
shaders/holographic/: connection_metrics.wgsl  resonance_matrix.wgsl
shaders/mera/: matmul.wgsl  upsample.wgsl  wavelet.wgsl
src/: attractor_pattern_system.rs  audit_runner.rs  complete_simulation.rs  complex.rs  creation_engine.rs  decision_engine.rs  dual_dimensional_integration.rs  ego_dynamics.rs  emergence_validator.rs  energy_center_interface.rs  energy_fields.rs  energy_flow_system.rs  energy_ray_centers.rs  enhanced_veil.rs  entity.rs  entity_holon_integration.rs  entity_state.rs  environments.rs  evolution_chain.rs  evolution_process.rs  evolutionary_dynamics.rs  fractal_holographic_structure.rs  free_will_capacity.rs  free_will_integration.rs  growth_principle.rs  gui_main.rs  gui_windowed_week2.rs  gui_windowed_week3.rs  gui_windowed_week4.rs  gui_windowed_week5.rs  gui_windowed_week6.rs  gui_windowed_week7.rs  gui_windowed_week8.rs  gui_windowed_week9.rs  harvestability.rs  hierarchical_refinement.rs  holographic_archetypical_mind.rs  holographic_complex.rs  holographic_connections.rs  holographic_properties.rs  (+45 more)
src/adapters/: mod.rs  physical_adapter.rs
src/archetypes/: a10_body_catalyst.rs  a11_body_experience.rs  a12_body_significator.rs  a13_body_transformation.rs  a14_body_great_way.rs  a15_spirit_matrix.rs  a16_spirit_potentiator.rs  a17_spirit_catalyst.rs  a18_spirit_experience.rs  a19_spirit_significator.rs  a1_mind_matrix.rs  a20_spirit_transformation.rs  a21_spirit_great_way.rs  a22_choice.rs  a2_mind_potentiator.rs  a3_mind_catalyst.rs  a4_mind_experience.rs  a5_mind_significator.rs  a6_mind_transformation.rs  a7_mind_great_way.rs  common.rs  (+12 more)
tests/: evolution_standalone.rs  integration.rs  unified_loop_test.rs
(+615 files in other folders)
