[package]
name = "holonic_realms"
version = "9.0.0"
edition = "2021"
authors = ["Ishan Parihar <ishanbestdabang@gmail.com>"]
description = "A comprehensive simulation of the Law of One cosmological principles"
license = "MIT"

[features]
default = []
sdl2_gui = ["sdl2"]

[lib]
name = "holonic_realms"
path = "src/lib.rs"

[dependencies]
# Core dependencies
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
lru = "0.12"
libc = "0.2"
termion = "4.0"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.16"
ctrlc = "3.4"

# GUI Dependencies - SDL2 + WGPU
wgpu = "0.20"
egui = "0.27"
egui-wgpu = "0.27"
# Keep winit for backward compatibility during migration
winit = "0.29"
egui-winit = "0.27"
nalgebra-glm = "0.19"
tokio = { version = "1.35", features = ["full"] }
pollster = "0.3"
bytemuck = "1.14"

# SDL2 - Primary windowing system (replaces Winit) - optional feature
sdl2 = { version = "0.37", default-features = false, features = ["use-pkgconfig", "raw-window-handle", "mixer"], optional = true }

# Raw window handle for SDL2-WGPU integration
raw-window-handle = { version = "0.6" }

[dev-dependencies]
# Performance testing and benchmarking
criterion = "0.5"
# Test dependencies can be added here

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
# Binaries to keep

[[bin]]
name = "physical_manifestation_demo"
path = "src/physical_manifestation_demo.rs"

[[bin]]
name = "holonic_realms"
path = "src/main.rs"

[[bin]]
name = "holonic_gui_complete"
path = "src/holonic_gui_complete.rs"

[[bin]]
name = "holonic_sdl2"
path = "src/bin/holonic_sdl2.rs"
required-features = ["sdl2"]
